2007-11-12 Added support for STIX fonts.  A new rcParam,
	   mathtext.fontset, can be used to choose between: 
           
	   'cm':
	     The TeX/LaTeX Computer Modern fonts 

	   'stix': 
	     The STIX fonts (see stixfonts.org)

	   'stixsans': 
	     The STIX fonts, using sans-serif glyphs by default 

	   'custom': 
	     A generic Unicode font, in which case the mathtext font
	     must be specified using mathtext.bf, mathtext.it,
	     mathtext.sf etc.
            
	   Added a new example, stix_fonts_demo.py to show how to access
	   different fonts and unusual symbols.
	    
           - MGD

2007-11-12 Options to disable building backend extension modules moved 
           from setup.py to setup.cfg - DSD

2007-11-09 Applied Martin Teichmann's patch 1828813: a QPainter is used in
           paintEvent, which has to be destroyed using  the method end(). If 
           matplotlib raises an exception before the call to end - and it 
           does if you feed it with bad data - this method end() is never 
           called and Qt4 will start spitting error messages

2007-11-09 Moved pyparsing back into matplotlib namespace. Don't use 
           system pyparsing, API is too variable from one release
           to the next - DSD

2007-11-08 Made pylab use straight numpy instead of oldnumeric
           by default - EF

2007-11-08 Added additional record array utilites to mlab (rec2excel,
           rec2gtk, rec_join, rec_append_field, rec_drop_field) - JDH

2007-11-08 Updated pytz to version 2007g - DSD

2007-11-08 Updated pyparsing to version 1.4.8 - DSD

2007-11-08 Moved csv2rec to recutils and added other record array
           utilities - JDH

2007-11-08 If available, use existing pyparsing installation - DSD

2007-11-07 Removed old enthought.traits from lib/matplotlib, added
           Gael Varoquaux's enthought.traits-2.6b1, which is stripped
           of setuptools. The package is installed to site-packages
           if not already available - DSD
